  ".cpp" too.

- Patch #1695229: Fix a regression with tarfile.open() and a missing name
  argument.

- tarfile.py: Fix directory names to have only one trailing slash.

- Fix test_pty.py to not hang on OS X (and theoretically other *nixes) when
  run in verbose mode.

- Bug #1693258: IDLE would show two "Preferences" menu's with some versions
  of Tcl/Tk


Extension Modules
-----------------

- Bug #1649098: Avoid declaration of zero-sized array declaration in
  structure.

- Bug #1703286: ctypes no longer truncates 64-bit pointers.

- Bug #1721309: prevent bsddb module from freeing random memory.

- Bug #1233: fix bsddb.dbshelve.DBShelf append method to work as
  intended for RECNO databases.

- Bug #1726026: Correct the field names of WIN32_FIND_DATAA and
  WIN32_FIND_DATAW structures in the ctypes.wintypes module.

- Added support for linking the bsddb module against BerkeleyDB 4.6.x.

- Fix libffi configure for hppa*-*-linux* | parisc*-*-linux*.

- Build using system ffi library on arm*-linux*.


Documentation
-------------

- Bug #1637365: add subsection about "__name__ == __main__" to the
  Python tutorial.

- Bug #1569057: Document that calling file.next() on a file open for writing
  has undefined behaviour.  Backport of r54712.

Build
-----

- Patch #786737: Allow building in a tree of symlinks pointing to
  a readonly source.

- Bug #1737210: Change Manufacturer of Windows installer to PSF.

- Bug #1746880: Correctly install DLLs into system32 folder on Win64.

- Define _BSD_SOURCE, to get access to POSIX extensions on OpenBSD 4.1+.

- Patch #1673122: Use an explicit path to libtool when building a framework. 
  This avoids picking up GNU libtool from a users PATH.

- Allow Emacs 22 for building the documentation in info format.

- Makefile.pre.in(buildbottest): Run an optional script pybuildbot.identify
  to include some information about the build environment.

Windows
-------

- Bug #1216: Restore support for Visual Studio 2002.
