@@ -72,7 +72,11 @@ The following values are provided as constant attributes of the hash objects
 returned by the constructors:
 
 \begin{datadesc}{digest_size}
-  The size of the resulting digest in bytes.
+  The size of the resulting hash in bytes.
+\end{datadesc}
+
+\begin{datadesc}{block_size}
+  The internal block size of the hash algorithm in bytes.
 \end{datadesc}
 
 A hash object has the following methods:
